--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   http_interceptor: ^2.0.0
   dio: ^5.9.0
   pretty_dio_logger: ^1.4.0
+  animated_bottom_navigation_bar: ^1.4.0
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
