--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   animated_bottom_navigation_bar: ^1.4.0
   convex_bottom_bar: ^3.2.0
+  curved_labeled_navigation_bar: ^2.0.6
 
 dev_dependencies:
   flutter_test:
