--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
   fl_chart: ^0.68.0
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3
@@ -83,6 +82,10 @@ flutter:
   assets:
     - assets/branding/majdoleen_logo.png
     - assets/branding/majdoleen_splash.png
+  fonts:
+    - family: Manrope
+      fonts:
+        - asset: assets/fonts/Manrope/Manrope[wght].ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
